--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
 		<title>I'm Convenienced</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lora:400i" rel="stylesheet">
 	<script src="https://use.fontawesome.com/37fae591b3.js"></script>
   </head>
   <body>
